# iot_city_full

./: .gitignore  API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOY.md  README.md  TODO.md  pubspec.yaml
analytics/: __init__.py
backend/: main.py  requirements.txt
dashboard/: index.html
energy/: optimizer.py
iot_city_flt/: .flutter-plugins-dependencies  CONTRIBUTING.md  README.md  TODO.md
iot_city_flt/.dart_tool/: package_config.json  package_graph.json
iot_city_flt/android/: local.properties
iot_city_flt/lib/: app.dart
iot_city_flt/test/: widget_test.dart
iot_city_qt/: .gitignore  ARCHITECTURE.md  CMakeLists.txt
iot_city_qt/scripts/: installl_deps_ito_app_qt.sh
iot_city_qt/src/: main.cpp  mainwindow.h
iot_city_web/: .gitignore
iot_city_web/analytics/: metrics_engine.py
iot_city_web/backend/: city_generator.py  dashboard_patch.py
iot_city_web/dashboard/: api.py
iot_city_web/data/: devices.json
iot_city_web/firmware_snippets/: iot_city_node.h
iot_city_web/frontend/: index.html
iot_city_web/scripts/: add_device.sh  clean_reinstall.sh  clear_cache.sh  install_analytics.sh  merge_extension.sh
iot_qt/: CMakeLists.txt  README.md  iot_qt.pro
iot_qt/.opencode/skills/iot-city-qt/: SKILL.md
iot_qt/src/: main.cpp  mainwindow.cpp
iot_qt/src/models/: device.cpp  device.h
iot_qt/src/network/: apiclient.cpp  websocketclient.cpp  websocketclient.h
iot_qt/src/utils/: settings.cpp
iot_qt/src/widgets/: dashboardwidget.cpp  dashboardwidget.h  devicedialog.h  mapwidget.cpp
lib/: main.dart
mqtt/: gateway_simulator.py
scripts/: control_system.sh  fix_iot_paho_error.sh  install_system.sh
simulator/: mesh_simulator.py
src/: mainwindow.cpp
(+72 files in other folders)
